[tool.poetry]
name = "rfiddemo"
version = "0.1.0"
description = ""
authors = ["Roshan Kattel <45326607+Roshankattel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.0"}
sqlmodel = "^0.0.8"
psycopg2 = "^2.9.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
